--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.mp4
-/website/blog/2024/
-/website/about/quiz.html
-website/journal/2024/secret.html
-website/vgs/template.txt
-/website/microblog/
+/doqmeat/blog/2024/
+/doqmeat/about/quiz.html
+doqmeat/journal/2024/secret.html
+doqmeat/vgs/template.txt
+/doqmeat/microblog/
