--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.mp4
 /doqmeat/blog/2024/
 /doqmeat/about/quiz.html
-doqmeat/journal/2024/secret.html
 doqmeat/vgs/template.txt
-/doqmeat/microblog/
+/doqmeat/!f/homepage-v3/madoka.css
