sites n git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.mp4
-/doqmeat/blog/2024/
+/doqmeat/blog/2024/journals
 /doqmeat/about/quiz.html
-doqmeat/vgs/template.txt
+/doqmeat/vgs/template.txt
 /doqmeat/music/listening-log/2024/summer.html
 /doqmeat/music/songs/
