--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /doqmeat/about/quiz.html
 /doqmeat/vgs/template.txt
 /doqmeat/music/songs/
+/doqmeat/journal/v4/
+/doqmeat/journal/2024/test-frame.html
