--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /doqmeat/vgs/template.txt
 /doqmeat/journal/history.html
 /doqmeat/music/homestuck-ost.html
+/doqmeat/joined/
+/doqmeat/index-v4.html
+/doqmeat/!f/index-v4/
