--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /doqmeat/music/homestuck-ost.html
 /doqmeat/tv/index-old.html
 icons.ase
+/doqmeat/music/index-v5.css
+/doqmeat/music/index-v5.html
+/doqmeat/music/music-player.js
