--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 /doqmeat/vgs/template.txt
 /doqmeat/vgs/consoles/
 /doqmeat/music/homestuck-ost.html
-/doqmeat/tv/index-old.html
 icons.ase
 /doqmeat/projects/learning-py
+/doqmeat/fashion/
