--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-*.mp4
-/doqmeat/blog/2024/journals
-/doqmeat/about/quiz.html
-/doqmeat/vgs/template.txt
-/doqmeat/music/homestuck-ost.html
 icons.ase
+/doqmeat/blog/2024/journals
+/doqmeat/music/homestuck-ost.html
 /doqmeat/.vscode/
+/doqmeat/music/concerts/
+/doqmeat/!f/v4/silly/
