updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 icons.ase
-/doqmeat/music/homestuck-ost.html
 /doqmeat/.vscode/
+/doqmeat/journal/test/
+/doqmeat/music/homestuck-ost.html
 /doqmeat/music/mp3-player/index.html
