minor changes to some pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /doqmeat/.vscode/
 /doqmeat/collection/blu-rays/
+/doqmeat/shrines/steve/
 /doqmeat/music/homestuck-ost.html
-/doqmeat/music/mp3-player/index.html
+/doqmeat/music/mp3-player/
