minor changes to scrapbook n homepage

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /doqmeat/music/homestuck-ost.html
 /doqmeat/music/mp3-player/
 /doqmeat/vgs/games/infinity-nikki/test-files/
+/doqmeat/journal/2025/10.html
