new microblog post

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/doqmeat/garden/
 /doqmeat/.vscode/
+
+/doqmeat/garden/
 /doqmeat/shrines/steve/
 /doqmeat/music/homestuck-ost.html
 /doqmeat/music/mp3-player/
 /doqmeat/vgs/games/infinity-nikki/test-files/
-.eleventy.js
-.eleventyignore
 /doqmeat/collection/picrews/
-
+/doqmeat/music/recaps/2025/
+/doqmeat/photobook/index-remake/
