fixing typos and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /doqmeat/music/mp3-player/
 /doqmeat/vgs/games/infinity-nikki/test-files/
 /doqmeat/photobook/index-remake/
+/doqmeat/music/playlists/
