--- a/.github/workflows/neocities.yml
+++ b/.github/workflows/neocities.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
         cleanup: true
-        dist_dir: doqmeat
+        dist_dir: -
