--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,6 @@ jobs:
         uses: indiefellas/deploy2nekoweb@main
         with:
           nekoweb-api-key: ${{ secrets.NEKOWEB_API_KEY }}
-          nekoweb-domain: 'doqmeat.nekoweb.org'
+          nekoweb-domain: 'doqmeat.com'
           nekoweb-username: 'doqmeat'
           directory: 'doqmeat'
