added nekoweb follow button, updated github readme file

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@
 /doqmeat/music/homestuck-ost.html
 /doqmeat/music/mp3-player/
 /doqmeat/vgs/games/infinity-nikki/test-files/
-/doqmeat/photobook/index-remake/
+/doqmeat/photobook/remake/
 /doqmeat/music/playlists/
+
+/doqmeat/layouts/
+/doqmeats/includes/
