--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,5 @@
 /doqmeat/photobook/remake/
 /doqmeat/music/playlists/
 
-/doqmeat/layouts/
-/doqmeats/includes/
 /doqmeat/notebook-rework/
-/doqmeat/info-rework/
+/doqmeat/info/test.html
