--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@
 /doqmeat/music/playlists/
 /doqmeat/notebook-rework/
 /doqmeat/journal-rework/
-
+/doqmeat/joined/
 # template pages
 /doqmeat/info/test.html
